2008-06-17  Les Harris  <me@lesharris.com>
    * src/mud-window.c, src/mud-connection-view.c, src/mud-connection-view.h:
    Added in input history support for our text entry widget.

2007-07-13  Jordi Mallach  <jordi@sindominio.net>

	* configure.ac, Makefile.am: Prepare for icon changes.
	* src/pixmaps/Makefile.am: do not distribute the old icon for now.

	* data/icons/*: New Tango icons from Andreass Nilsson. Many thanks!

	* ui/main.glade: Add Andreas to credits.

2006-09-12  Jordi Mallach  <jordi@sindominio.net>

	* MAINTAINERS: Fix Les' email address, and add Mart.

2006-09-04  Les Harris  <lescom@comcast.net>

	* src/mud-window-mudedit.c, src/mud-window-mudlist.c,
	src/mud-connection-view.c:  Fixed a few things which
	were previously warnings in GTK+ 2.8 which are now
	critical in GTK+ 2.10.

2006-09-02  Les Harris  <lescom@comcast.net>

	* src/mud-parse-trigger.c, src/mud-parse-alias.c: Fixes a
	crash due to previous Lestupidy, frees slist properly now.

2006-08-29  Mart Raudsepp  <leio@dustbite.net>

	* configure.ac: Bump GTK_REQUIRED to 2.10.0 for GtkStatusIcon.
	* src/mud-tray.c: Port to GtkStatusIcon to get rid of libegg.
	Fixes #69909.
	* src/Makefile.am (gnome_mud_SOURCES): Remove eggtrayicon.[ch].
	* src/eggtrayicon.[ch]: Removed.

2006-08-24  Jordi Mallach  <jordi@sindominio.net>

	* src/mud-preferences-window.c, src/mud-window-mudedit.c,
	src/mud-window-mudlist.c: don't wrap gconf_client_get_string()
	calls around g_strdup(), as it leaks the string and
	gconf_client_get_string() already does the right thing.
	* src/mud-parse-alias.c, src/mud-parse-alias.c,
	mud-preferences-window.c, mud-window-mudlist.c: Plug memleaks.

	Thanks to Kjartan Maraas for the pointers.

2006-06-08  Jordi Mallach  <jordi@sindominio.net>

	* plugins/automapper/map.c, ui/prefs.glade,
	gnome-mud.schemas.in: Fix typos and unify some strings.
	Thanks Thierry Moisan. Fixes #328527, #343018.

2006-05-25  Jordi Mallach  <jordi@sindominio.net>
