@@ -279,29 +279,32 @@ mud_window_textview_keypress(GtkWidget *widget, GdkEventKey *event, MudWindow *w
 
 		return TRUE;
 	}
+
+	if(window->priv->current_view)
+	{	
+		if(event->keyval == GDK_Up)
+		{
+		    text = mud_connection_view_get_history_item(
+		        MUD_CONNECTION_VIEW(window->priv->current_view), HISTORY_UP);
+	    
+	   		gtk_text_buffer_set_text(buffer, text, strlen(text));
+	   	 	gtk_text_buffer_get_bounds(buffer, &start, &end);
+	   	 	gtk_text_buffer_select_range(buffer, &start, &end);
+	    
+	    	return TRUE;
+		}
 	
-	if(event->keyval == GDK_Up)
-	{
-	    text = mud_connection_view_get_history_item(
-	        MUD_CONNECTION_VIEW(window->priv->current_view), HISTORY_UP);
+		if(event->keyval == GDK_Down)
+		{
+		    text = mud_connection_view_get_history_item(
+		        MUD_CONNECTION_VIEW(window->priv->current_view), HISTORY_DOWN);
 	    
-	    gtk_text_buffer_set_text(buffer, text, strlen(text));
-	    gtk_text_buffer_get_bounds(buffer, &start, &end);
-	    gtk_text_buffer_select_range(buffer, &start, &end);
+		    gtk_text_buffer_set_text(buffer, text, strlen(text));
+		    gtk_text_buffer_get_bounds(buffer, &start, &end);
+		    gtk_text_buffer_select_range(buffer, &start, &end);
 	    
-	    return TRUE;
-	}
-	
-	if(event->keyval == GDK_Down)
-	{
-	    text = mud_connection_view_get_history_item(
-	        MUD_CONNECTION_VIEW(window->priv->current_view), HISTORY_DOWN);
-	    
-	    gtk_text_buffer_set_text(buffer, text, strlen(text));
-	    gtk_text_buffer_get_bounds(buffer, &start, &end);
-	    gtk_text_buffer_select_range(buffer, &start, &end);
-	    
-	    return TRUE;
+		    return TRUE;
+		}
 	}
 
 	return FALSE;
